--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "docsy-example-site",
-  "version": "0.8.0",
-  "version.next": "0.8.1-dev.0-unreleased",
-  "description": "Example site that uses Docsy theme for technical documentation.",
-  "repository": "github:google/docsy-example",
-  "homepage": "https://example.docsy.dev",
-  "author": "Docsy Authors",
+  "name": "Falco-Talon",
+  "version": "0.1.0",
+  "description": "Falco Talon, a response engine for Falco",
+  "repository": "github:Falco-Talon/falco-talon",
+  "homepage": "https://docs.falco-talon.org",
+  "author": "Thomas Labarussias",
   "license": "Apache-2.0",
-  "bugs": "https://github.com/google/docsy-example/issues",
-  "spelling": "cSpell:ignore HTMLTEST precheck postbuild -",
+  "bugs": "https://github.com/Falco-Talon/falco-talon.github.io/issues",
   "scripts": {
     "_build": "npm run _hugo-dev --",
     "_check:links": "echo IMPLEMENTATION PENDING for check-links; echo",
@@ -37,6 +35,7 @@
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "hugo-extended": "0.120.4",
+    "npx": "^10.2.2",
     "postcss-cli": "^10.1.0"
   }
 }
