--- a/hugo.toml
+++ b/hugo.toml
@@ -163,7 +163,7 @@ enable = false
   desc = "Development takes place here!"
 [[params.links.developer]]
   name = "Slack"
-  url = "https://kubernetes.slack.com/falco"
+  url = "https://kubernetes.slack.com/messages/falco"
   icon = "fab fa-slack"
   desc = "Chat with other project developers"
 
